// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourceDetails should render the component with doc type 1`] = `
<div
  className="source"
>
  <div
    className="source-header"
  >
    <span
      className="chat-citation"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      2
    </span>
    <div
      className="source-title"
      title="Nam at tortor in tellus"
    >
      Nam at tortor in tellus
    </div>
    <svg
      className="icon"
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
      fill="currentColor"
      height="15"
      stroke="currentColor"
      viewBox=""
      width="15"
      xmlns=""
    />
  </div>
  <div
    className="source-desc"
  >
    <span>
      Vestibulum purus quam scelerisque ut
    </span>
  </div>
</div>
`;

exports[`SourceDetails should render the component with link type 1`] = `
<a
  className="source source-link"
  href="https://www.example.com"
  rel="noreferrer"
  target="_blank"
>
  <div
    className="source-header"
  >
    <span
      className="chat-citation"
    >
      1
    </span>
    <div
      className="source-title"
      title="Nam at tortor in tellus"
    >
      Nam at tortor in tellus
    </div>
    <svg
      className="icon"
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
      fill="currentColor"
      height="15"
      stroke="currentColor"
      viewBox=""
      width="15"
      xmlns=""
    />
  </div>
  <div
    className="source-desc"
  >
    <span>
      Vestibulum purus quam scelerisque ut
    </span>
  </div>
</a>
`;
